K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banksim
  labels:
    name: banksim
