K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ginauth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ginauth
  template:
    metadata:
      labels:
        app: ginauth
    spec:
      containers:
        - name: ginauth-container
          image: localhost:9999/ginauth
          ports:
            - containerPort: 9999
          resources:
            limits:
              cpu: "0.5" # CPU limit for the container
              memory: "512Mi"  # Memory limit for the container
