K8s/banksim-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: banksim-api-svc
  labels:
    app: banksim-api
  namespace: banksim
spec:
  ports:
    - port: 9999
  selector:
    app: banksim-api
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banksim-api-svc
  labels:
    app: banksim-api
  namespace: banksim
spec:
  selector:
    matchLabels:
      app: banksim-api
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: banksim-api
        tier: frontend
      namespace: banksim
    spec:
      hostname: idp
      containers:
      - image: jaixkash876/ginauth:latest
        name: banksim-api
        ports:
        - containerPort: 9999
          name: banksim-api
        resources:
            limits:
              cpu: '500m'
              memory: '100Mi'
