K8s/idp.yaml
# We are using a deployment kind, that creates a kubernetes replica set under the covers
# this allows us to scale up and scald down, initial replicas will be one for demo
# purposes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idp-api
  labels:
    app: idp
  namespace: banksim
spec:
  selector:
    matchLabels:
      app: idp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: idp
        tier: frontend
      namespace: banksim
    spec:
      # Just a quick word on imagePullPolicy: IfNotPresent, by default kubernetes will try to pull
      # container images from a container repository like docker hub.  Since we are just demoing
      # we manually installed the container inside of kind via the command in the instructions
      # 'kind load docker-image ...' thus this tells the API to check if the container is present
      # and if so use it, if not, find it in the repository.  Also notice i did not tag the image
      # by default it will put ':latest' at the end, best practice is to fix to a tagged image so
      # that the build process is largely ephemeral - eg, .../se577-demo-app:v-1.1
      containers:
        - image: architectingsoftware/cnse-idp
          name: idp
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 1234
            hostPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: idp-svc
  namespace: banksim
spec:
  selector:
    app: idp
  ports:
    # Default port used by the image
    - port: 1234
