K8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: banksim-psql
  labels:
    app: banksim
  namespace: banksim
spec:
  ports:
    - port: 5432
  selector:
    app: banksim
    tier: data
  #type: ClusterIP
  clusterIP: None 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banksim-psql
  labels:
    app: banksim
  namespace: banksim
spec:
  selector:
    matchLabels:
      app: banksim
      tier: data
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: banksim
        tier: data
      namespace: banksim
    spec:
      containers:
      - image: postgres
        name: psql
        ports:
        - containerPort: 5432
          name: psql
        volumeMounts:
        - name: psql-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: psql-persistent-storage
        persistentVolumeClaim:
          claimName: psql-pv-claim
