K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ginauth-service
spec:
  selector:
    app: ginauth
  ports:
  - protocol: TCP
    port: 9999
    targetPort: 9999
  type: LoadBalancer
