K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: banksim
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: '/idp(/|$)(.*)'
        backend:
          service:
            name: idp-svc
            port:
              number: 1234
